--- a/templates/genre.html
+++ b/templates/genre.html
@@ -210,7 +210,7 @@
       </ul>
         <nav class="navbar navbar-dark">
           <form class="form-inline">
-            <a class="btn btn-outline-danger" role="button" href="#" onclick="onClickSearch()">Search</a>
+            <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
           </form>
         </nav>
         <nav class="navbar navbar-dark">
@@ -224,13 +224,13 @@
 
 <div class="wrap">
     <div class="jumbotron jumbotron-style">
-        <h1 class="display-4">🎬관심있는 장르/언어를 골라보세요</h1>
+        <h1>🎬 관심있는 장르/언어를 골라보세요</h1>
         <p class="lead"><font class="jumbo-font">장르별/언어별 TOP20을 보여드려요🌏</font></p>
     </div>
 
     <div class="btn-group">
-      <button type="button" class="btn btn-danger">Genre</button>
-      <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button type="button" class="btn btn-light">Genre</button>
+      <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
       </button>
       <div class="dropdown-menu" id="selectgenreid">
@@ -257,8 +257,8 @@
       </div>
     </div>
     <div class="btn-group">
-      <button type="button" class="btn btn-danger">Language</button>
-      <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button type="button" class="btn btn-light">Language</button>
+      <button type="button" class="btn btn-light dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="sr-only">Toggle Dropdown</span>
       </button>
       <div class="dropdown-menu" id="selectnationid">
