--- a/templates/main.html
+++ b/templates/main.html
@@ -34,9 +34,9 @@
 
     <style>
         .wrap {
-            width: auto;
-            margin-right: 100px;
-            margin-left: 100px;
+            width: 1800px;
+            margin: auto;
+            margin-top: 50px;
         }
         .movietitle-font{
             color: black;
@@ -342,7 +342,7 @@
       </ul>
         <nav class="navbar navbar-dark">
           <form class="form-inline">
-            <a class="btn btn-outline-danger" role="button" href="#" onclick="onClickSearch()">Search</a>
+            <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
           </form>
         </nav>
         <nav class="navbar navbar-dark">
@@ -379,13 +379,13 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-    <div><span class="badge badge-danger ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Today's Trending</span></div>
+    <div><span class="badge badge-light ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Today's Trending</span></div>
     <div>
         <div id="movie-rank">
 
         </div>
     </div>
-    <div><span class="badge badge-danger ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Movies with many ratings</span></div>
+    <div><span class="badge badge-light ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Movies with many ratings</span></div>
     <div>
         <div id="current-movie">
 
