--- a/templates/rate.html
+++ b/templates/rate.html
@@ -241,7 +241,7 @@
       </ul>
         <nav class="navbar navbar-dark">
           <form class="form-inline">
-            <a class="btn btn-outline-danger" role="button" href="#" onclick="onClickSearch()">Search</a>
+            <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
           </form>
         </nav>
         <nav class="navbar navbar-dark">
@@ -254,7 +254,7 @@
 </header>
 <div class="wrap">
     <div class="jumbotron jumbotron-style">
-        <h1 class="display-4">🤔어떤 영화를 좋아하세요?</h1>
+        <h1>🤔어떤 영화를 좋아하세요?</h1>
         <p class="lead"><font class="jumbo-font">재밌게 봤던 영화에 별점을 남겨주세요🙂</font></p>
     </div>
     <div class="row mb-5" id="cards-box">
