--- a/templates/selectMovie.html
+++ b/templates/selectMovie.html
@@ -30,11 +30,6 @@
     <title>Movie Delivery</title>
 
     <style>
-
-        .jumbo-font{
-            font-family: 'Gamja Flower', cursive;
-            font-size: 30px;
-        }
         .size {
             width: auto;
             height: 800px;
@@ -43,13 +38,6 @@
             width: 1100px;
             margin: auto;
             margin-top: 50px;
-        }
-        .background {
-            background-color: black;
-        }
-        body{
-            margin-top:20px;
-            background:#FAFAFA;
         }
         .movie-title-font {
             font-size: 20px;
@@ -259,7 +247,7 @@
             </ul>
             <nav class="navbar navbar-dark">
                 <form class="form-inline">
-                    <a class="btn btn-outline-danger" role="button" href="#" onclick="onClickSearch()">Search</a>
+                    <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
                 </form>
             </nav>
             <nav class="navbar navbar-dark">
@@ -272,7 +260,7 @@
 </header>
 <div class="wrap">
     <div class="jumbotron jumbotron-style">
-        <h1 class="display-4">내가 평점을 준 영화🌟</h1>
+        <h1>내가 평점을 준 영화 🌟</h1>
     </div>
     <div class="row mb-5" id="cards-box">
 
