--- a/templates/detail.html
+++ b/templates/detail.html
@@ -28,10 +28,10 @@
 </head>
 <style>
     .wrap {
-            width: 1100px;
-            margin: auto;
-            margin-top: 50px;
-        }
+        width: 1100px;
+        margin: auto;
+        margin-top: 50px;
+    }
     .background-image{
         background-size: cover;
         clip-path: ellipse(1800px 600px at 20% 0%);
@@ -301,7 +301,7 @@
       </ul>
         <nav class="navbar navbar-dark">
           <form class="form-inline">
-            <a class="btn btn-outline-danger" role="button" href="#" onclick="onClickSearch()">Search</a>
+            <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
           </form>
         </nav>
         <nav class="navbar navbar-dark">
