--- a/templates/search.html
+++ b/templates/search.html
@@ -161,7 +161,7 @@
       </ul>
         <nav class="navbar navbar-dark">
           <form class="form-inline">
-            <a class="btn btn-outline-danger" role="button" href="#" onclick="onClickSearch()">Search</a>
+            <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
           </form>
         </nav>
         <nav class="navbar navbar-dark">
