error: type(float to int)

--- a/templates/genre.html
+++ b/templates/genre.html
@@ -31,10 +31,9 @@
     <style>
         .wrap {
             width: 1350px;
-            margin: auto;
-            margin-top: 50px;
+            margin: 50px auto;
         }
-        .movietitle-font {
+        .movie-title-font {
             font-size: 20px;
             font-family: 'Do Hyeon', sans-serif;
             color: black;
