--- a/templates/main.html
+++ b/templates/main.html
@@ -35,12 +35,16 @@
     <style>
         .wrap {
             width: 1800px;
-            margin: auto;
-            margin-top: 50px;
+            margin: 50px auto;
         }
-        .movietitle-font{
-            color: black;
+        .wrap-cards{
+            width: 1700px;
+            margin: 50px auto;
+        }
+        .movie-title-font{
+            font-size: 20px;
             font-family: 'Do Hyeon', sans-serif;
+            color: black;
         }
         .carousel-caption {
             position: absolute;
@@ -318,77 +322,77 @@
     </script>
 </head>
 <body class="background wrap">
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-background">
-        <a class="navbar-brand" href="#" onclick="onClickHome()"><img src="/static/logo3.JPG" alt="User Icon"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#" onclick="onClickHome()">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" onclick="onClickRate()">star</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" onclick="onClickGenre()">rank</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" onclick="onClickMypage()">My page</a>
-        </li>
-      </ul>
-        <nav class="navbar navbar-dark">
-          <form class="form-inline">
-            <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
-          </form>
-        </nav>
-        <nav class="navbar navbar-dark">
-          <form class="form-inline">
-            <a class="btn btn-outline-light" role="button" href="#" onclick="onClickBtnLogOut()">Logout</a>
-          </form>
-        </nav>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-background">
+            <a class="navbar-brand" href="#" onclick="onClickHome()"><img src="/static/logo3.JPG" alt="User Icon"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#" onclick="onClickHome()">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick="onClickRate()">star</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick="onClickGenre()">rank</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick="onClickMypage()">My page</a>
+            </li>
+          </ul>
+            <nav class="navbar navbar-dark">
+              <form class="form-inline">
+                <a class="btn btn-outline-info" role="button" href="#" onclick="onClickSearch()">Search</a>
+              </form>
+            </nav>
+            <nav class="navbar navbar-dark">
+              <form class="form-inline">
+                <a class="btn btn-outline-light" role="button" href="#" onclick="onClickBtnLogOut()">Logout</a>
+              </form>
+            </nav>
+        </div>
+      </nav>
+    </header>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner size">
+          <div class="carousel-item active" id="showimage01">
+
+          </div>
+          <div class="carousel-item" id="showimage02">
+
+          </div>
+          <div class="carousel-item" id="showimage03">
+
+          </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-  </nav>
-</header>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner size">
-      <div class="carousel-item active" id="showimage01">
-
-      </div>
-      <div class="carousel-item" id="showimage02">
-
-      </div>
-      <div class="carousel-item" id="showimage03">
-
-      </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-    <div><span class="badge badge-light ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Today's Trending</span></div>
-    <div>
+    <div class="wrap-cards">
+        <div><span class="badge badge-light ranking-font">Today's Trending</span></div>
         <div id="movie-rank">
 
         </div>
-    </div>
-    <div><span class="badge badge-light ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Movies with many ratings</span></div>
-    <div>
-        <div id="current-movie">
+        <div><span class="badge badge-light ranking-font">Movies with many ratings</span></div>
+        <div>
+            <div id="current-movie">
 
+            </div>
         </div>
     </div>
 </body>
