--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,6 +3,10 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <!--og tag-->
+    <meta property="og:title" content="MovieLab" />
+    <meta property="og:description" content="영화 추천 시스템" />
+    <meta property="og:image" content="{{ url_for('static', filename='logo2.JPG') }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
