--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--og tag-->
+    <meta property="og:title" content="MovieLab" />
+    <meta property="og:description" content="영화 추천 시스템" />
+    <meta property="og:image" content="{{ url_for('static', filename='logo2.JPG') }}" />
     <title>SignUp</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="{{url_for('static', filename='login.css')}}" rel="stylesheet" id="login-css">
