--- a/templates/main.html
+++ b/templates/main.html
@@ -3,6 +3,10 @@
 <head>
   <!-- Required meta tags -->
     <meta charset="utf-8">
+    <!--og tag-->
+    <meta property="og:title" content="MovieLab" />
+    <meta property="og:description" content="영화 추천 시스템" />
+    <meta property="og:image" content="{{ url_for('static', filename='logo2.JPG') }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="{{url_for('static', filename='card.css')}}" rel="stylesheet" id="card-css">
 
@@ -40,11 +44,6 @@
         .wrap-cards{
             width: 1700px;
             margin: 50px auto;
-        }
-        .movie-title-font{
-            font-size: 20px;
-            font-family: 'Do Hyeon', sans-serif;
-            color: black;
         }
         .carousel-caption {
             position: absolute;
@@ -240,7 +239,7 @@
                                                 <div class="movie-content">
                                                     <div class="movie-content-header">
                                                         <a href="#" onclick="onClickdetail(${id})">
-                                                            <h3 class="movie-title movietitle-font">${title}</h3>
+                                                            <h3 class="movie-title">${title}</h3>
                                                         </a>
                                                         <div></div>
                                                     </div>
@@ -286,7 +285,7 @@
                                                 <div class="movie-content">
                                                     <div class="movie-content-header">
                                                         <a href="#" onclick="onClickdetail(${id})">
-                                                            <h3 class="movie-title movietitle-font">${title}</h3>
+                                                            <h3 class="movie-title">${title}</h3>
                                                         </a>
                                                         <div></div>
                                                     </div>
